compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__spread_empty_list.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main() {\n  case [] {\n    [..] -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case [] {
    [..] -> 1
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    case [] of
    _ ->
        1
end.
